--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "momment": "^0.0.1",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "connect-mongodb-session": "^2.4.1",
   }
 }
